<resources>
    <string name="app_name">Homeless-Shelter-App</string>
    <string name="registerButton">Register</string>
    <string name="loginButton">Login</string>
    <string name="incorrectCred">Incorrect Username or Password</string>
    <string name="passwordField">Password</string>
    <string name="passwordFieldReg">Re-enter Password</string>
    <string name="usernameField">Username</string>
    <string name="signIn">Sign In</string>
    <string name="logoutButton">Logout</string>
    <string name="nonMatchingPasswords">Passwords Do Not Match</string>
    <string name="nameField">Legal Name</string>
    <string name="emailField">Email</string>
    <string name="cancelButton">Cancel</string>
    <string name="userType">TextView</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="enter_shelter_name">Enter shelter name</string>
    <string name="search">Search</string>
    <string-array name="userTypes">
        <item>User</item>
        <item>Admin</item>
    </string-array>
    <string-array name="shelters">
        <item>"My Sister's House"</item>
        <item>"The Atlanta Day Center for Women &amp; Children"</item>
        <item>"The Shepherd's Inn"</item>
        <item>"Fuqua Hall"</item>
        <item>"Atlanta's Children Center"</item>
        <item>"Eden Village"</item>
        <item>"Our House"</item>
        <item>"Covenant House Georgia"</item>
        <item>"Nicholas House"</item>
        <item>"Hope Atlanta"</item>
        <item>"Gateway Center"</item>
        <item>"Young Adult Guidance Center"</item>
        <item>"Homes of Light"</item>
    </string-array>
    <string-array name="shelterCategories">
        <item>"Families"</item>
        <item>"Veterans"</item>
    </string-array>
    <string-array name="shelterAge">
        <item>Anyone</item>
        <item>Children</item>
        <item>Children under 5</item>
        <item>newborns</item>
        <item>Young adults</item>
    </string-array>
    <string-array name="shelterGenders">
        <item>Anyone</item>
        <item>"Men"</item>
        <item>"Women"</item>
        <item>"Other"</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name = "apibase">api.shelter.lmc.gatech.edu</string>
</resources>
