...
        app:layout_constraintBottom_toTopOf="@+id/genderSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameSearch"
        app:layout_constraintVertical_bias="0.513" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="235dp"
        android:layout_height="21dp"
...
